@@ -15,13 +15,13 @@
 	<img class="icon" src="icons/firefox.png" />
 	<p class="caption">Firefox web browser</p>
 	</li>
-</ul>
-<h2 class="subtitle">Supported software</h2>
-<ul>
 	<li>
 	<img class="icon" src="icons/thunderbird.png" />
 	<p class="caption">Thunderbird</p>
 	</li>
+</ul>
+<h2 class="subtitle">Supported software</h2>
+<ul>
 	<li>
 	<img class="icon" src="icons/chromium.png" />
 	<p class="caption">Chromium</p>
