@@ -1,6 +1,10 @@
 ubiquity-slideshow-ubuntu (158) UNRELEASED; urgency=medium
 
+  [ Dimitri John Ledkov ]
   * Update Software Center name, patch from mpt.
+
+  [ Martin Wimpress]
+  * Update to list Thunderbird as "Included software". (LP: #1869008)
 
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 01 Apr 2020 21:41:13 +0200
 
